fix image uploading

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <li>Post CTA</li>     
+        <li>Post CTA</li>
         <div class="row objective u-max-full-width">
           <p>Send a message to your users acknowledging their action and describing next steps. Select your message type:</p>
           <div class="text-center">
@@ -140,7 +140,10 @@
 
         <div class="row generic-template text-center">
           <div class='carousel-container'>
-            <div class='carousel-image'></div>
+            <div class='carousel-image image-preview' id='image-preview-5'>
+              <label for="image-upload" class='image-label' id="image-label-5">Upload Image</label>
+              <input type="file" name="image" class='image-upload' id="image-upload-5" />
+            </div>
             <div class ='carousel-title-encapsulate'>
               <textarea class='carousel-title' placeholder='Enter a Heading (i.e. "Thank you!")' rows= '2' maxlength="80"></textarea>
               <textarea class='carousel-subtitle' placeholder='Description of next steps' rows= '2' maxlength="80"></textarea>
@@ -174,9 +177,9 @@
         <p> This message should be directly related to your Facebook ad or your website's value prop. The CTA can be something like "Buy Now!".</p>
         <div class='call-to-action-container'>
           <div class='business-name-header'>Acme Corp</div>
-          <div class='call-to-action-image image-preview' id='image-preview-1'>
-            <label for="image-upload" class='image-label' id="image-label-1">Upload Image</label>
-            <input type="file" name="image" class='image-upload' id="image-upload-1" />
+          <div class='call-to-action-image image-preview' id='image-preview-6'>
+            <label for="image-upload" class='image-label' id="image-label-6">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-6" />
           </div>
           <div class ='call-to-action-title-encapsulate'>
             <textarea class='call-to-action-title' data-limit-rows="true" rows= "2" maxlength="80">Interested in this product?</textarea>
@@ -192,9 +195,9 @@
         <li>Product Carousel</li>
         <p>Use a carousel of messages to provide your users with products to purchase and add to cart buttons.</p>
         <div class='carousel-container'>
-          <div class='carousel-image image-preview' id='image-preview-1'>
-            <label for="image-upload" class='image-label' id="image-label-1">Upload Image</label>
-            <input type="file" name="image" class='image-upload' id="image-upload-1" />
+          <div class='carousel-image image-preview' id='image-preview-7'>
+            <label for="image-upload" class='image-label' id="image-label-7">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-7" />
           </div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' data-limit-rows="true" placeholder='Product #1 Title' rows= '2' maxlength="80"></textarea>
@@ -207,9 +210,9 @@
           </div>
         </div>
         <div class='carousel-container'>
-          <div class='carousel-image image-preview' id='image-preview-2'>
-            <label for="image-upload" class='image-label' id="image-label-2">Upload Image</label>
-            <input type="file" name="image" class='image-upload' id="image-upload-2" />
+          <div class='carousel-image image-preview' id='image-preview-8'>
+            <label for="image-upload" class='image-label' id="image-label-8">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-8" />
           </div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' data-limit-rows="true" placeholder='Product #2 Title' rows= '2' maxlength="80"></textarea>
@@ -222,9 +225,9 @@
           </div>
         </div>
         <div class='carousel-container'>
-          <div class='carousel-image image-preview' id='image-preview-3'>
-            <label for="image-upload" class='image-label' id="image-label-3">Upload Image</label>
-            <input type="file" name="image" class='image-upload' id="image-upload-3" />
+          <div class='carousel-image image-preview' id='image-preview-9'>
+            <label for="image-upload" class='image-label' id="image-label-9">Upload Image</label>
+            <input type="file" name="image" class='image-upload' id="image-upload-9" />
           </div>
           <div class ='carousel-title-encapsulate'>
             <textarea class='carousel-title' data-limit-rows="true" placeholder='Product #3 Title' rows= '2' maxlength="80"></textarea>
@@ -241,7 +244,10 @@
         <p>This is the template that the user sees for products in their cart when they are ready to checkout.</p>
         <div class="text-center">
           <div class='carousel-container'>
-            <div class='carousel-image'></div>
+            <div class='carousel-image image-preview' id='image-preview-10'>
+              <label for="image-upload" class='image-label' id="image-label-10">Upload Image</label>
+              <input type="file" name="image" class='image-upload' id="image-upload-10" />
+            </div>
             <div class ='carousel-title-encapsulate'>
               <textarea class='carousel-title' placeholder='Product Name' rows= '1' maxlength="80"></textarea>
               <textarea class='carousel-subtitle' placeholder='Order Description (size, colour, etc)' rows= '2' maxlength="80"></textarea>
@@ -273,7 +279,10 @@
 
         <div class="row generic-template text-center">
           <div class='carousel-container'>
-            <div class='carousel-image'></div>
+            <div class='carousel-image image-preview' id='image-preview-11'>
+              <label for="image-upload" class='image-label' id="image-label-11">Upload Image</label>
+              <input type="file" name="image" class='image-upload' id="image-upload-11" />
+            </div>
             <div class ='carousel-title-encapsulate'>
               <textarea class='carousel-title' placeholder='Enter a Heading (i.e. "Thank you!")' rows= '2' maxlength="80"></textarea>
               <textarea class='carousel-subtitle' placeholder='Description of next steps' rows= '2' maxlength="80"></textarea>
