--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p>This is the page that the user sees when they first try to access your bot. It should give them a short introduction to what you can offer them.</p>
         <div class='get-started-img-container'>
           <div class='business-name-header'>Acme Corp</div>
-          <input class='business-name-input' placeholder='Acme Corp'>
+          <input class='business-name-input' id='business-name-input-generate-leads' placeholder='Acme Corp'>
           <textarea class='get-started-text' placeholder='We are a cool company. Chat with us.'></textarea>
         </div>
 
@@ -69,7 +69,7 @@
             <input type="file" name="image" class='image-upload' id="image-upload-1" />
           </div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' data-limit-rows="true" placeholder='Insert bold value proposition!' rows= "2" maxlength="80"></textarea>
+            <textarea class='call-to-action-title' id="call-to-action-title-generate-leads" data-limit-rows="true" placeholder='Insert bold value proposition!' rows= "2" maxlength="80"></textarea>
             <textarea class='call-to-action-subtitle' data-limit-rows="true" placeholder='Enter one sentence description of service.' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
@@ -169,7 +169,7 @@
         <p>This is the page that the user sees when they first try to access your bot. It should give them a short introduction to what you can offer them.</p>
         <div class='get-started-img-container'>
           <div class='business-name-header'>Acme Corp</div>
-          <input class='business-name-input' placeholder='Acme Corp'>
+          <input class='business-name-input' id='business-name-input-sell-products' placeholder='Acme Corp'>
           <textarea class='get-started-text' placeholder='We are a cool company. Chat with us.' maxlength="160"></textarea>
         </div>
 
@@ -182,7 +182,7 @@
             <input type="file" name="image" class='image-upload' id="image-upload-6" />
           </div>
           <div class ='call-to-action-title-encapsulate'>
-            <textarea class='call-to-action-title' data-limit-rows="true" rows= "2" maxlength="80">Interested in this product?</textarea>
+            <textarea class='call-to-action-title' id="call-to-action-title-sell-products" data-limit-rows="true" rows= "2" maxlength="80">Interested in this product?</textarea>
             <textarea class='call-to-action-subtitle' data-limit-rows="true" rows= "2" maxlength="80">Product Description</textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
