--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class='get-started-img-container'>
           <div class='business-name-header'>Acme Corp</div>
           <input class='business-name-input' id='business-name-input-generate-leads' placeholder='Acme Corp'>
-          <textarea class='get-started-text' placeholder='We are a cool company. Chat with us.'></textarea>
+          <textarea class='get-started-text' id='get-started-text-generate-leads' placeholder='We are a cool company. Chat with us.'></textarea>
         </div>
 
         <li>Initial Message with CTA</li>
@@ -73,9 +73,9 @@
             <textarea class='call-to-action-subtitle' data-limit-rows="true" placeholder='Enter one sentence description of service.' rows= "2" maxlength="80"></textarea>
           </div>
           <div class="call-to-action-button-encapsulate">
-            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20">Get a free quote</textarea>
-            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='call-to-action-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' id='call-to-action-button1-generate-leads' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20">Get a free quote</textarea>
+            <textarea class='call-to-action-button' id='call-to-action-button2-generate-leads' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='call-to-action-button' id='call-to-action-button3-generate-leads' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
 
@@ -87,13 +87,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-2" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' data-limit-rows="true" placeholder='Service Feature #1' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Feature Description' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' id='carousel1-title-generate-leads' data-limit-rows="true" placeholder='Service Feature #1' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' id='carousel1-subtitle-generate-leads' data-limit-rows="true" placeholder='Feature Description' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' data-limit-rows="true" rows = "1" maxlength="20">Learn More</textarea>
-            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' id="carousel1-button1" data-limit-rows="true" rows = "1" maxlength="20">Learn More</textarea>
+            <textarea class='carousel-button' id="carousel1-button2" data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' id="carousel1-button3" data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
@@ -102,13 +102,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-3" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' data-limit-rows="true" placeholder='Service Feature #2' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='Feature Description' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' id='carousel2-title-generate-leads' data-limit-rows="true" placeholder='Service Feature #2' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' id='carousel2-subtitle-generate-leads' data-limit-rows="true" placeholder='Feature Description' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20">Learn More</textarea>
-            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' id="carousel2-button1" data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20">Learn More</textarea>
+            <textarea class='carousel-button' id="carousel2-button2" data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' id="carousel2-button3" data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
         <div class='carousel-container'>
@@ -117,13 +117,13 @@
             <input type="file" name="image" class='image-upload' id="image-upload-4" />
           </div>
           <div class ='carousel-title-encapsulate'>
-            <textarea class='carousel-title' data-limit-rows="true" placeholder='Customer Reviews' rows= '2' maxlength="80"></textarea>
-            <textarea class='carousel-subtitle' data-limit-rows="true" placeholder='See what our customers have to say.' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-title' id='carousel3-title-generate-leads' data-limit-rows="true" placeholder='Customer Reviews' rows= '2' maxlength="80"></textarea>
+            <textarea class='carousel-subtitle' id='carousel3-subtitle-generate-leads' data-limit-rows="true" placeholder='See what our customers have to say.' rows= '2' maxlength="80"></textarea>
           </div>
           <div class="carousel-button-encapsulate">
-            <textarea class='carousel-button' data-limit-rows="true" rows = "1" maxlength="20">Learn More</textarea>
-            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
-            <textarea class='carousel-button' data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' id="carousel3-button1" data-limit-rows="true" rows = "1" maxlength="20">Learn More</textarea>
+            <textarea class='carousel-button' id="carousel3-button2" data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
+            <textarea class='carousel-button' id="carousel3-button3" data-limit-rows="true" placeholder='Button Title' rows = "1" maxlength="20"></textarea>
           </div>
         </div>
 
@@ -170,7 +170,7 @@
         <div class='get-started-img-container'>
           <div class='business-name-header'>Acme Corp</div>
           <input class='business-name-input' id='business-name-input-sell-products' placeholder='Acme Corp'>
-          <textarea class='get-started-text' placeholder='We are a cool company. Chat with us.' maxlength="160"></textarea>
+          <textarea class='get-started-text' id='get-started-text-sell-products' placeholder='We are a cool company. Chat with us.' maxlength="160"></textarea>
         </div>
 
         <li>Initial Message with CTA</li>
