Added to sell-products

--- a/index.html
+++ b/index.html
@@ -304,6 +304,11 @@
         <div class="row plain-text text-center">
           <textarea class='plain-text-area' placeholder='Enter a message... (i.e. "Thanks for your signing up!"' rows= '2' maxlength="80"></textarea>
         </div>
+        <li>Generate JSON</li>
+        <div class="row generic-template text-center">
+          <button id="generate-json-button2">Generate JSON</button>
+        </div>
+        <pre id="json-data2"></pre>
       </ol>
     </div>
   </div>
